fix(docs): menu items wrapping in ie

--- a/docs/app/@theme/components/header/header.component.scss
+++ b/docs/app/@theme/components/header/header.component.scss
@@ -58,6 +58,7 @@
 
         a {
           color: $menu-item-fg;
+          display: block;
 
           &:hover, &.active {
             color: $menu-item-fg-active;
